# matsuba

./: .gitignore  404.html  Cargo.toml  README.md  argparse.rs  build.rs  build.sh  cli.rs  contributors.html  conversion.rs  converter.rs  db.rs  dfa.rs  error.rs  features.html  index.html  justfile  keycode.rs  keysym.rs  matsuba.rs  matsuba_default.toml  print.html  searchindex.js  searchindex.json  xcb.rs  xmlparse.rs
.github/workflows/: docs.yml  release.yml
crates/argparse/: Cargo.toml  README.md
crates/argparse/src/: error.rs  lib.rs
crates/xmodmap/: Cargo.toml  README.md
crates/xmodmap/src/: lib.rs
dev/hooks/: commit-msg
developer/: index.html
docs/: book.toml
docs/en/: book.toml
docs/en/src/: SUMMARY.md  contributors.md  features.md
docs/en/src/user/: configuration.md
docs/ja/: book.toml
docs/ja/src/: README.md  SUMMARY.md
docs/ja/src/developer/: README.md
docs/ja/src/user/: installation.md  usage.md
docs/src/: README.md
docs/src/developer/: README.md
docs/src/user/: README.md  configuration.md  installation.md  usage.md
matsuba_cli/: Cargo.toml
matsuba_cli/src/: cli.rs
matsuba_common/: Cargo.toml
matsuba_common/src/: conversion.rs  converter.rs  lib.rs
matsuba_grpc/: Cargo.toml  build.rs
matsuba_grpc/proto/: matsuba.proto
matsuba_grpc/src/: lib.rs
matsuba_ime/: Cargo.toml
matsuba_ime/src/: main.rs
matsuba_server/: Cargo.toml  matsuba.toml  matsuba_default.toml
matsuba_server/src/: config.rs  conversion.rs  converter.rs  db.rs  main.rs  renderer.rs  service.rs  xmlparse.rs
matsuba_server/src/output/: mod.rs
matsuba_server/src/renderer/: gui.rs  mod.rs  util.rs  xorg.rs
matsucli/: Cargo.toml
matsucli/src/: main.rs
matsud/: Cargo.toml
matsud/src/: config.rs  main.rs
package/archlinux/: PKGBUILD
package/archlinux/git/: PKGBUILD
proto/: matsuba.proto
services/: matsuba.service
src/: cli.rs  common.rs  config.rs  conversion.rs  converter.rs  error.rs  lib.rs  main.rs  x.rs  xmlparse.rs  xutils.rs
user/: configuration.html  index.html  installation.html  usage.html
