[package]
name = "matsuba"
version = "0.1.0"
edition = "2018"
authors = ["pinosaur"]
description = "lightweight japanese ime"
repository = "https://github.com/MrPicklePinosaur/matsuba"

[[bin]]
name = "matsuba"

[workspace]
members = ["crates/*"]

[dependencies]
argparse = { path = "crates/argparse" }
xmodmap = { path = "crates/xmodmap" }

x11rb = { version = "0.9.0", features = ["render"] }
fontconfig = { version = "0.5.0" }
freetype-rs = { version = "0.29.1" }
rusqlite = { version = "0.27.0", features = [] }
roxmltree = { version = "0.14.1" }
