[package]
name = "matsuba"
version = "0.1.0"
edition = "2018"
authors = ["pinosaur"]
description = "lightweight japanese ime"
repository = "https://github.com/MrPicklePinosaur/matsuba"

[[bin]]
name = "matsucli"
path = "src/bin/matsucli/main.rs"

[[bin]]
name = "matsud"
path = "src/bin/matsud/main.rs"

[workspace]
members = ["crates/*"]

[dependencies]
argparse = { git = "https://github.com/MrPicklePinosaur/pino.rs" }
xmodmap = { path = "crates/xmodmap" }

tonic = { version = "0.7", features = [] }
tokio = { version = "1.18", features = ["rt-multi-thread"] }
prost = { version = "0.10" }

x11rb = { version = "0.9.0", features = ["render"] }
fontconfig = { version = "0.5.0" }
freetype-rs = { version = "0.29.1" }
rusqlite = { version = "0.27.0", features = ["bundled"] }
roxmltree = { version = "0.14.1" }

[build-dependencies]
tonic-build = "0.7"
