[package]
name = "matsuba"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "lightweight japanese ime"
repository = "https://github.com/MrPicklePinosaur/matsuba"

[[bin]]
name = "matsucli"
path = "src/bin/matsucli/main.rs"

[[bin]]
name = "matsud"
path = "src/bin/matsud/main.rs"

[dependencies]
pino_argparse = { version = "0.1" }
pino_xmodmap = { version = "0.1" }

tonic = { version = "0.7", features = [] }
tokio = { version = "1.18", features = ["rt-multi-thread"] }
prost = { version = "0.10" }
chrono = { version = "0.4" }

x11rb = { version = "0.9.0", features = ["render"] }
fontconfig = { version = "0.5.0" }
freetype-rs = { version = "0.29.1" }
rusqlite = { version = "0.27.0", features = ["bundled"] }
roxmltree = { version = "0.14.1" }

[build-dependencies]
tonic-build = "0.7"
