[package]
name = "matsuba_ime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "lightweight japanese ime"
repository = "https://github.com/MrPicklePinosaur/matsuba"

[[bin]]
name = "matsuime"
path = "src/main.rs"

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
wgpu = "0.14"
wgpu_glyph = "0.18"
pollster = "0.2"


