[package]
name = "matsuba_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "lightweight japanese ime"
repository = "https://github.com/MrPicklePinosaur/matsuba"

[[bin]]
name = "matsud"
path = "src/main.rs"

[dependencies]
matsuba_common = { path = "../matsuba_common" }
matsuba_grpc = { path = "../matsuba_grpc" }

tonic = { version = "0.7", features = [] }
tokio = { version = "1.18", features = ["rt-multi-thread"] }
prost = { version = "0.10" }

rusqlite = { version = "0.27.0", features = ["bundled"] }
roxmltree = { version = "0.14.1" }
config = { version = "0.13", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }

wgpu = "0.14"
wgpu_glyph = "0.18"
winit = "0.27"

env_logger = "0.9"
log = "0.4"
