[package]
name = "matsuba_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "lightweight japanese ime"
repository = "https://github.com/MrPicklePinosaur/matsuba"

[[bin]]
name = "matsud"
path = "src/main.rs"

[features]
default = ["x11"]

x11 = ["x11rb", "pino_xmodmap"]

[dependencies]
matsuba_common = { path = "../matsuba_common" }
matsuba_grpc = { path = "../matsuba_grpc" }

tonic = { version = "0.7", features = [] }
tokio = { version = "1.18", features = ["rt-multi-thread"] }
prost = { version = "0.10" }

rusqlite = { version = "0.27.0", features = ["bundled"] }
roxmltree = { version = "0.14.1" }
config = { version = "0.13", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
cgmath = "0.18"

wgpu = "0.14"
wgpu_glyph = "0.18"
pino_wgpu_shape = { git = "https://github.com/MrPicklePinosaur/pino_wgpu_shape" }
winit = "0.27"

x11rb = { version = "0.11.0", features = ["render"], optional = true }
pino_xmodmap = { version = "0.2.0", optional = true }

reqwest = { version = "0.11" }
flate2 = "1.0"

pino_utils = "0.1.0"
env_logger = "0.9"
log = "0.4"
lazy_static = "1.4"
